flux/infrastructure/3dprinting/fdmmonster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdmmonster
  namespace: 3dprinting
  labels:
    app: fdmmonster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdmmonster
  template:
    metadata:
      labels:
        app: fdmmonster
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: fdm-monster
        image: docker.io/fdmmonster/fdm-monster:0.30.2
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 4000
          name: http
          protocol: TCP
        volumeMounts:
        - name: database
          mountPath: /app/database
        - name: media
          mountPath: /app/media
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: fdm-monster-media
      - name: database
        persistentVolumeClaim:
          claimName: fdm-monster-database
