flux/infrastructure/3dprinting/fdmmonster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fdmmonster
  namespace: 3dprinting
spec:
  selector:
    app: fdmmonster
  ports:
  - name: http
    port: 4000
    targetPort: 4000
  type: NodePort
