flux/infrastructure/3dprinting/fdmmonster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdmmonster
  namespace: 3dprinting
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/middlewares: identity-sso-admin-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - fdm.becklab.cloud
    secretName: fdmmonster-tls
  rules:
  - host: fdm.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fdmmonster
            port:
              number: 4000
